--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,7 +6,7 @@ layers:
       -
         name: DizzyAscensionEffect
         strength: 1
-        duration: 15
+        durationRemaining: 15
   -
     name: LayerTwo
     offset: 40
@@ -14,7 +14,7 @@ layers:
       -
         name: DizzyAscensionEffect
         strength: 2
-        duration: 22
+        durationRemaining: 22
   -
     name: LayerThree
     offset: 30
@@ -22,15 +22,15 @@ layers:
       -
         name: DizzyAscensionEffect
         strength: 5
-        duration: 30
+        durationRemaining: 30
       -
         name: HallucinatingAscensionEffect
         strength: 4
-        duration: 30
+        durationRemaining: 30
       -
         name: SoundAscensionEffect
         strength: 1
-        duration: 30
+        durationRemaining: 30
         sounds:
           - ENTITY_ZOMBIE_AMBIENT
           - BLOCK_FIRE_AMBIENT
@@ -44,15 +44,15 @@ layers:
       -
         name: DizzyAscensionEffect
         strength: 10
-        duration: 30
+        durationRemaining: 30
       -
         name: BloodyAscensionEffect
         strength: 10
-        duration: 30
+        durationRemaining: 30
       -
         name: DamagingAscensionEffect
         strength: 4
-        duration: 30
+        durationRemaining: 30
   -
     name: LayerFive
     offset: 20
@@ -61,15 +61,15 @@ layers:
       -
         name: DizzyAscensionEffect
         strength: 10
-        duration: 30
+        durationRemaining: 30
       -
         name: BloodyAscensionEffect
         strength: 10
-        duration: 30
+        durationRemaining: 30
       -
         name: DamagingAscensionEffect
         strength: 6
-        duration: 30
+        durationRemaining: 30
 
   -
     name: LayerSix
@@ -79,4 +79,4 @@ layers:
       -
         name: DeathAscensionEffect
         strength: 10
-        duration: 30
+        durationRemaining: 30
