Allow players to turn tp off for building

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,3 +12,9 @@ commands:
   relicreload:
     description: Reload relics
     usage: /relicreload
+  sectionoff:
+    description: Cheat
+    usage: /sectionoff
+  sectionon:
+    description: why
+    usage: /sectionon
