--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,7 +13,7 @@ layers:
     sectionOffsets:
       - [425,83,36]
       - [2953,515,41]
-      - [4521,563,0]
+      - [4521,563,41]
   -
     name: LayerTwo
     offset: 40
@@ -22,6 +22,8 @@ layers:
         name: DizzyAscensionEffect
         strength: 2
         durationRemaining: 22
+    sectionOffsets:
+      - [1673, 289, 0]
   -
     name: LayerThree
     offset: 30
