Refactor and move interfaces out

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: MineInAbyss
 version: "0.02b"
 author: Derongan
-main: com.derongan.minecraft.mineinabyss.MineInAbyss
+main: MineInAbyss
 prefix: MiB
 description: A mod that adds abyss effects
 
