--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ repositories {
     mavenLocal()
 }
 
+configurations{
+
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.spigotmc', name: 'spigot-api', version: project.property("apiversion")
