--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,20 @@
-apply plugin: 'java'
+subprojects {
+    apply plugin: 'java'
 
-group = pluginGroup
-version = pluginVersion
+    group 'com.derongan.minecraft'
+    version '1.0-SNAPSHOT'
+    sourceCompatibility = 1.8
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-    maven {
-        name = 'spigotmc-repo'
-        url = 'https://hub.spigotmc.org/nexus/content/groups/public/'
-    }
-    maven {
-        name = 'sonatype'
-        url = 'https://oss.sonatype.org/content/groups/public/'
-    }
-    mavenLocal()
-}
-
-configurations{
-
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.spigotmc', name: 'spigot-api', version: project.property("apiversion")
-    compile group: 'org.spigotmc', name: 'spigot', version: project.property("apiversion")
-    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
-    compile group: 'commons-dbutils', name: 'commons-dbutils', version: '1.7'
-}
-
-import org.apache.tools.ant.filters.ReplaceTokens
-
-processResources {
-    from(sourceSets.main.resources.srcDirs) {
-        filter ReplaceTokens, tokens: [version: version]
+    repositories {
+        mavenCentral()
+        maven {
+            name = 'spigotmc-repo'
+            url = 'https://hub.spigotmc.org/nexus/content/groups/public/'
+        }
+        maven {
+            name = 'sonatype'
+            url = 'https://oss.sonatype.org/content/groups/public/'
+        }
+        mavenLocal()
     }
 }
