--- a/MineInAbyss-API/build.gradle
+++ b/MineInAbyss-API/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.spigotmc', name: 'spigot-api', version: project.property("apiversion")
+    compile group: 'org.spigotmc', name: 'spigot-api', version: project.property("api_version")
 }
