--- a/MineInAbyss/build.gradle
+++ b/MineInAbyss/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
     compile project(':MineInAbyss-API')
-    compile group: 'org.spigotmc', name: 'spigot', version: project.property("apiversion")
+    compile group: 'org.spigotmc', name: 'spigot', version: project.property("api_version")
 }
