--- a/MineInAbyss/src/main/resources/plugin.yml
+++ b/MineInAbyss/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: MineInAbyss
 version: @plugin_version@
 author: Derongan
-main: MineInAbyss
+main: com.derongan.minecraft.mineinabyss.plugin.MineInAbyss
 prefix: MiB
 description: A mod that adds abyss effects
 
