--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ subprojects {
     apply plugin: 'java'
 
     group 'com.derongan.minecraft'
-    version '1.0-SNAPSHOT'
+    version plugin_version+"-SNAPSHOT"
     sourceCompatibility = 1.8
 
     repositories {
