--- a/MineInAbyss/build.gradle
+++ b/MineInAbyss/build.gradle
@@ -2,3 +2,7 @@ dependencies {
     compile project(':MineInAbyss-API')
     compile group: 'org.spigotmc', name: 'spigot', version: project.property("api_version")
 }
+
+jar {
+    from project(':MineInAbyss-API').sourceSets.main.output
+}
