--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-.idea/modules/
-.idea/libraries/
-.idea/gradle.xml
-.idea/workspace.xml
+.idea/
 .idea/modules.xml
 .gradle/
 gradle/
 MadeInAbyss.iml
+build/
