Add ability to enable/disable curse and sections

--- a/MineInAbyss/src/main/resources/plugin.yml
+++ b/MineInAbyss/src/main/resources/plugin.yml
@@ -21,3 +21,9 @@ commands:
   sectionon:
     description: why
     usage: /sectionon
+  curseon:
+    description: Turn on curse
+    usage: /curseon
+  curseoff:
+    description: Turn off curse
+    usage: /curseoff
