--- a/MineInAbyss/src/main/resources/plugin.yml
+++ b/MineInAbyss/src/main/resources/plugin.yml
@@ -2,6 +2,8 @@ name: MineInAbyss
 version: @plugin_version@
 author: Derongan
 main: com.derongan.minecraft.mineinabyss.MineInAbyss
+softdepend: [Multiverse-Core]
+
 prefix: MiB
 description: A mod that adds abyss effects
 
