--- a/MineInAbyss/src/main/resources/config.yml
+++ b/MineInAbyss/src/main/resources/config.yml
@@ -16,10 +16,12 @@ layers:
     world: LayerOne
     effects:
       -
-        name: DizzyAscensionEffect
+        name: PotionAscensionEffect
         strength: 1
         duration: 7
         iterations: 3
+        effects:
+          - CONFUSION
     sections:
       -
         refTop: [2370, 236, 141]
@@ -39,10 +41,19 @@ layers:
     world: LayerTwo
     effects:
       -
-        name: DizzyAscensionEffect
-        strength: 2
+        name: PotionAscensionEffect
+        strength: 14
         duration: 12
         iterations: 2
+        effects:
+          - CONFUSION
+          - HUNGER
+      -
+        name: VomitAscensionEffect
+        strenght: 7
+        duration: 3
+        iterations: 2
+        offset: 5
     sections:
       -
         refTop: [973, 236, -163]
@@ -58,18 +69,28 @@ layers:
     world: LayerThree
     effects:
       -
-        name: DizzyAscensionEffect
-        strength: 5
+        name: PotionAscensionEffect
+        strength: 14
         duration: 30
+        effects:
+          - CONFUSION
+          - HUNGER
+      -
+        name: VomitAscensionEffect
+        strenght: 12
+        duration: 2
+        iterations: 2
+        offset: 5
 #      -
 #        name: HallucinatingAscensionEffect
 #        strength: 4
 #        durationRemaining: 30
       -
         name: SoundAscensionEffect
-        strength: 1
+        strength: 0
         duration: 4
-        iterations: 7
+        iterations: 6
+        offset: 5
         sounds:
           - BLOCK_FIRE_AMBIENT
           - BLOCK_GRASS_STEP
@@ -120,20 +141,28 @@ layers:
     world: LayerFour
     effects:
       -
-        name: DizzyAscensionEffect
+        name: PotionAscensionEffect
         strength: 10
         duration: 36
+        effects:
+        - CONFUSION
       -
         name: BloodyAscensionEffect
         strength: 10
         duration: 2
-        offset: 4
+        offset: 1
         iterations: 16
       -
-        name: DamagingAscensionEffect
-        strength: 1
-        duration: 30
-        offset: 6
+        name: PotionAscensionEffect
+        strength: 0
+        duration: 28
+        offset: 2
+        effects:
+        - WITHER
+        - HUNGER
+        - SLOW
+        - SLOW_DIGGING
+        - WEAKNESS
     sections:
       -
         refTop: [0, 232, -148]
