--- a/MineInAbyss/build.gradle
+++ b/MineInAbyss/build.gradle
@@ -9,9 +9,9 @@ jar {
 }
 
 // Uncomment and change path to your testing server to automatically drop jar
-//task copyJar(type: Copy) {
-//    from jar // here it automatically reads jar file produced from jar task
-//    into '/srv/craftbukkit/plugins/'
-//}
-//
-//build.dependsOn copyJar
+task copyJar(type: Copy) {
+    from jar // here it automatically reads jar file produced from jar task
+    into '/srv/craftbukkit/plugins/'
+}
+
+build.dependsOn copyJar
