--- a/MineInAbyss/build.gradle
+++ b/MineInAbyss/build.gradle
@@ -1,17 +1,28 @@
+plugins {
+    id 'com.github.johnrengelman.shadow' version '5.0.0'
+}
+
 dependencies {
     compile project(':MineInAbyss-API')
     compile group: 'org.spigotmc', name: 'spigot-api', version: project.property("api_version")
+    compile 'de.erethon:headlib:3.0.1'
+    implementation 'com.github.Mineinabyss:guiy:master-SNAPSHOT'
     testCompile "org.mockito:mockito-core:2.+"
 }
 
-jar {
-    from project(':MineInAbyss-API').sourceSets.main.output
+shadowJar {
+    classifier = null
+    dependencies {
+        include(dependency('com.github.Mineinabyss:guiy:master-SNAPSHOT'))
+        include(dependency('de.erethon:headlib:3.0.1'))
+        include(project(':MineInAbyss-API'))
+    }
 }
 
 // Uncomment and change path to your testing server to automatically drop jar
-task copyJar(type: Copy) {
-    from jar // here it automatically reads jar file produced from jar task
+/*task copyJar(type: Copy) {
+    from shadowJar // here it automatically reads jar file produced from jar task
     into '/srv/craftbukkit/plugins/'
 }
 
-build.dependsOn copyJar
+build.dependsOn copyJar*/
