--- a/MineInAbyss/src/main/resources/plugin.yml
+++ b/MineInAbyss/src/main/resources/plugin.yml
@@ -14,6 +14,8 @@ commands:
     description: Turn on the curse of ascension
   curseoff:
     description: Turn off the curse of ascension
+  stats:
+    description: Shows statistics about you!
 
 permissions:
   mineinabyss.curse.toggle:
