--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,2 @@
-include 'MineInAbyss-API'
-include 'MineInAbyss'
-
-//Set this to the path to your deeper world directory
-boolean inComposite = gradle.parent != null
-if (!inComposite) { //Allows other plugins to use this one through Gradle
-    includeBuild '../DeeperWorld'
-}
+include ':DeeperWorld'
+project(':DeeperWorld').projectDir = new File('../DeeperWorld')
