Adding some commands for joining and exiting a run plus rewrote some classes in Kotlin

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,3 +13,4 @@
 #          - CONFUSION
 #    # Fill this with the section names defined in the deeper world config
 #    sections: [section1]
+adventure-mode: false
