--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@ import org.apache.tools.ant.filters.ReplaceTokens
 plugins {
     id 'com.github.johnrengelman.shadow' version '5.0.0'
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 group 'com.derongan.minecraft'
 version plugin_version + "-SNAPSHOT"
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -35,6 +37,7 @@ dependencies {
         implementation project(':guiy')
     else
         implementation 'com.github.Mineinabyss:guiy:master-SNAPSHOT'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 processResources {
@@ -42,7 +45,6 @@ processResources {
         filter ReplaceTokens, tokens: [plugin_version: plugin_version]
     }
 }
-
 
 shadowJar {
     getArchiveClassifier().set(null)
@@ -63,3 +65,13 @@ task copyJar(type: Copy) {
 }
 
 build.dependsOn copyJar
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
