--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-api_version=1.13.2-R0.1-SNAPSHOT
-plugin_version=1.0.0
+plugin_version=1.0-MC1.15
 
 #this should always be set to false in "production", enabling it is used to make any local additions to
 #guiy before they are pushed to guiy's main repo.
