--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
-    id 'com.github.johnrengelman.shadow' version '5.0.0'
     id 'java'
+    id 'idea'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
@@ -33,7 +34,7 @@ repositories {
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.15-R0.1-SNAPSHOT'
-    implementation project(':DeeperWorld')
+    compileOnly project(':DeeperWorld')
     implementation 'de.erethon:headlib:3.0.2'
     compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
 
@@ -52,15 +53,7 @@ processResources {
 
 shadowJar {
     getArchiveClassifier().set(null)
-    dependencies {
-        if (useLocalGuiy.toBoolean())
-            include(project(':guiy'))
-        else
-            include(dependency('com.github.Mineinabyss:guiy:master-SNAPSHOT'))
-
-        include(dependency('de.erethon:headlib:3.0.2'))
-        include(dependency("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"))
-    }
+    minimize()
 }
 build.dependsOn shadowJar
 
