--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,5 @@ if(useLocalGuiy.toBoolean()) {
     include ':guiy'
     project(':guiy').projectDir = new File('../guiy')
 }
+include 'idofront'
+project(':idofront').projectDir = new File('../idofront')
