--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: @plugin_version@
 author: Derongan
 main: com.derongan.minecraft.mineinabyss.MineInAbyss
 api-version: '1.13'
-softdepend: [Multiverse-Core]
+softdepend: [Multiverse-Core, Geary]
 depend: [DeeperWorld]
 
 prefix: MiB
