--- a/settings.gradle
+++ b/settings.gradle
@@ -8,5 +8,5 @@ if(useLocalGuiy.toBoolean()) {
 include 'idofront'
 project(':idofront').projectDir = new File('../idofront')
 
-include ':Geary'
-project(':Geary').projectDir = new File('../geary')
+include 'geary'
+project(':geary').projectDir = new File('../geary')
