Switch to Jitpack for idofront and guiy dependencies Update GUIs to use new guiy-dsl Updated Idofront

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,7 @@ plugin_version=1.0-MC1.15
 
 #this should always be set to false in "production", enabling it is used to make any local additions to
 #guiy before they are pushed to guiy's main repo.
-useLocalGuiy=true
+useLocalGuiy=false
+
+#same logic applies here, but for Idofront.
+useLocalIdofront=false
