--- a/build.gradle
+++ b/build.gradle
@@ -35,17 +35,18 @@ repositories {
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.15-R0.1-SNAPSHOT'
     compileOnly project(':DeeperWorld')
-    implementation project(':idofront')
     implementation 'de.erethon:headlib:3.0.2'
     compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
 
     compileOnly project(':geary')
     compileOnly group: 'com.badlogicgames.ashley', name: 'ashley', version: '1.7.3'
 
-    if (useLocalGuiy.toBoolean())
-        implementation project(':guiy')
-    else
-        implementation 'com.github.Mineinabyss:guiy:master-SNAPSHOT'
+    if (useLocalGuiy.toBoolean()) implementation project(':guiy')
+    else implementation 'com.github.mineinabyss:guiy:kotlin-dsl-SNAPSHOT'
+
+    if (useLocalIdofront.toBoolean()) implementation project(':idofront')
+    else implementation 'com.github.mineinabyss:idofront:master-SNAPSHOT'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
@@ -57,6 +58,8 @@ processResources {
 
 shadowJar {
     getArchiveClassifier().set(null)
+    relocate 'com.derongan.minecraft.guiy', "com.derongan.minecraft.guiy.${project.group}.${project.name}"
+    relocate 'com.mineinabyss.idofront', "com.mineinabyss.idofront.${project.group}.${project.name}"
     minimize {
         exclude(dependency("org.jetbrains.kotlin:.*"))
         exclude(dependency('de.erethon:headlib:3.0.2'))
@@ -64,22 +67,22 @@ shadowJar {
 }
 build.dependsOn shadowJar
 
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
+compileKotlin { kotlinOptions { jvmTarget = "1.8" } }
+compileTestKotlin { kotlinOptions { jvmTarget = "1.8" } }
 
 //Move into plugins folder
 if (plugin_path != '') {
+    println("Copying to plugin directory")
     task copyJar(type: Copy) {
         from shadowJar // here it automatically reads jar file produced from jar task
         into plugin_path
+    }
+    build.dependsOn copyJar
+} else if (parent != null && parent.hasProperty("plugin_path")) {
+    println("Copying to parent project's plugin directory")
+    task copyJar(type: Copy) {
+        from shadowJar
+        into parent.ext.plugin_path
     }
     build.dependsOn copyJar
 } else println("Skipped copyJar")
