--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,8 @@ plugins {
     id 'java'
     id 'idea'
     id 'com.github.johnrengelman.shadow' version '5.2.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
 }
-
-ext.kotlin_version = '1.3.61'
 
 group = 'com.derongan.minecraft'
 version = plugin_version + "-SNAPSHOT"
@@ -53,7 +51,7 @@ dependencies {
     else implementation 'com.github.mineinabyss:guiy:kotlin-dsl-SNAPSHOT'
 
     if (useLocalIdofront.toBoolean()) implementation project(':idofront')
-    else implementation group: 'com.mineinabyss', name: 'idofront', version: '0.1.0-SNAPSHOT'
+    else implementation group: 'com.mineinabyss', name: 'idofront', version: '0.1.1-alpha-5'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
