--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 plugin_version=1.0-MC1.15
+kotlin_version=1.3.70
 
 #this should always be set to false in "production", enabling it is used to make any local additions to
 #guiy before they are pushed to guiy's main repo.
