Swap to using github package repo for non local

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-plugin_version=1.0-MC1.15
+plugin_version=0.1.0-alpha
 kotlin_version=1.3.70
 
 #this should always be set to false in "production", enabling it is used to make any local additions to
 #guiy before they are pushed to guiy's main repo.
 useLocalGuiy=false
-
-#same logic applies here, but for Idofront.
 useLocalIdofront=false
+useLocalDeeperWorld=false
+useLocalGeary=false
