--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,11 @@ plugins {
 }
 
 group = 'com.derongan.minecraft'
-version = plugin_version + "-SNAPSHOT"
+version = plugin_version
+
+if (project.hasProperty("buildNo")) {
+    version += "." + buildNo
+}
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -26,32 +30,58 @@ repositories {
     maven { url 'https://erethon.de/repo/' } //HeadLib
     mavenLocal()
     jcenter()
-    maven { url 'https://jitpack.io' } //JitPack
-
     maven {
-        name = "MineInAbyss"
-        url = uri("https://maven.pkg.github.com/MineInAbyss/Idofront")
+        name = "GitHubPackages-DeeperWorld"
+        url = uri("https://maven.pkg.github.com/MineInAbyss/DeeperWorld")
         credentials {
-            username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-            password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
         }
     }
+    maven {
+        name = "GitHubPackages-guiy"
+        url = uri("https://maven.pkg.github.com/MineInAbyss/guiy")
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
+    maven {
+        name = "GitHubPackages-idofront"
+        url = uri("https://maven.pkg.github.com/MineInAbyss/Idofront")
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
+    maven {
+        name = "GitHubPackages-geary"
+        url = uri("https://maven.pkg.github.com/MineInAbyss/geary")
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
+    maven { url 'https://jitpack.io' } //JitPack
 }
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.15-R0.1-SNAPSHOT'
-    compileOnly project(':DeeperWorld')
     implementation 'de.erethon:headlib:3.0.2'
     compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
-
-    compileOnly project(':geary')
     compileOnly group: 'com.badlogicgames.ashley', name: 'ashley', version: '1.7.3'
 
+    if (useLocalGeary.toBoolean()) implementation project(':geary')
+    else implementation group: 'com.mineinabyss', name: 'geary', version: '0.1.+'
+
     if (useLocalGuiy.toBoolean()) implementation project(':guiy')
-    else implementation 'com.github.mineinabyss:guiy:kotlin-dsl-SNAPSHOT'
+    else implementation group: 'com.derongan.minecraft', name: 'guiy', version: '0.1.+'
 
     if (useLocalIdofront.toBoolean()) implementation project(':idofront')
-    else implementation group: 'com.mineinabyss', name: 'idofront', version: '0.1.1-alpha-5'
+    else implementation group: 'com.mineinabyss', name: 'idofront', version: '0.1.+'
+
+    if (useLocalDeeperWorld.toBoolean()) implementation project(':DeeperWorld')
+    else implementation group: 'com.derongan.minecraft', name: 'DeeperWorld', version: '0.1.+'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
